Refactor FileSieve for enhanced duplicate detection and media processing
- Updated core duplicate-file detection logic in `sieve.py` to support media files and improve orchestration.
- Introduced new data classes for file metadata and signatures.
- Enhanced configuration handling for various parameters including media processing options.
- Implemented a more efficient file scanning method using `os.scandir`.
- Added new tests for cache invalidation, exact file detection, and media similarity checks.
- Improved error handling and logging throughout the duplicate detection process.
- Introduced backward-compatible hashing functions for file processing.
- Added tests for media processing and similarity detection, ensuring robustness against edge cases.

--- a/config/sieve.conf
+++ b/config/sieve.conf
@@ -1,3 +1,13 @@
 [global]
 dup_dir:/tmp/sieve/dups
-read_size:1024
+mode:media
+cache_db:.filesieve-cache.sqlite
+hash_workers:8
+media_workers:2
+
+[media]
+enabled:true
+image_hamming_threshold:8
+video_hamming_threshold:32
+video_frame_hamming_threshold:12
+duration_bucket_seconds:2
