--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "filesieve"
 version = "0.0.0"
 description = "Find duplicate files by content and move duplicates to an alternate directory"
-readme = "README"
+readme = "README.md"
 requires-python = ">=3.10"
 dependencies = []
 
